# goods-clas

./: .gitignore  README.md  answer_api.py  compress.py  compress_api.py  get_text_emb.py  main.py  main_ddp.py  predict.py  pseudo_label.py  pyproject.toml  split.py  test.py  textonly.py
scripts/: analyze.py  avg_logits.py  compress_api.py
src/: augment.py  config.py  dataset.py  logging_config.py  loops.py  model.py  utils.py
